--- a/view/jquery-easyui/datagrid.html
+++ b/view/jquery-easyui/datagrid.html
@@ -28,3 +28,21 @@
 <script>
   
 </script>
+    $("#ipt").numberspinner({
+            spin:function(type){
+                if(type==true){}
+            }
+
+        });
+
+
+
+
+            onSpinUp: function() {
+                var v1 = $("#ipt").numberspinner("getValue");
+                $("#ipt2").numberspinner("setValue", v1);
+            },
+            onSpinDown: function() {
+                var v1 = $("#ipt").numberspinner("getValue");
+                $("#ipt2").numberspinner("setValue", v1);
+            }
