--- a/view/echarts/echarts-map-markclick.html
+++ b/view/echarts/echarts-map-markclick.html
@@ -55,13 +55,13 @@
                             ccsmile: dataplace[i].ccsmile
                         });                     
                     };
-                    // for (var j = 0;j < geocoord.length; j++) { 
-                    //      markArr.push({
-                    //         name:geocoord[j].mark,
-                    //     });
+                    /*  for (var j = 0;j < geocoord.length; j++) { 
+                          markArr.push({
+                            name:geocoord[j].mark,
+                         });
 
-                    //     coordsObj[geocoord[j].mark] = geocoord[j].coord;                      
-                    // }
+                         coordsObj[geocoord[j].mark] = geocoord[j].coord;                      
+                    }*/
                     for (var mark in data.hehe) {
                         markArr.push({
                             name:mark
