--- a/view/echarts/echarts-pie1.html
+++ b/view/echarts/echarts-pie1.html
@@ -68,7 +68,7 @@
 								type:'pie',
 								radius : '60%',
 								center: ['50%', '50%'],
-								data:dataArr
+								data:dataArr,
 							}
 						]
 					};
