--- a/view/jquery-easyui/combobox.html
+++ b/view/jquery-easyui/combobox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <title>datagrid</title>
+    <title>二级联动</title>
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
