--- a/view/jquery-easyui/getdata.html
+++ b/view/jquery-easyui/getdata.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" type="text/css" href="../../static/mod/jquery-easyui-1.4.2/themes/icon.css">
 </head>
 <body>
-<input id="time" class="easyui-datetimebox" name="birthday" value="nowDate">
+<input id="time" class="easyui-datetimebox" name="birthday">
+<input type="text" class="easyui-combobox" name="heheda" value="2">
 </body>
 </html>
 <script>
 
-
+$("input[name='heheda']").val(1);
+console.log($("input[name='heheda']"))
 </script>
