--- a/view/ajax/ajax.html
+++ b/view/ajax/ajax.html
@@ -29,6 +29,10 @@
 	 		console.log(arr);
 	    }
 	  })
+	 $("select").on("blur",function(){
+	 	alert(1);
+	 })
+	 
 	 var heheda=$("#testSelect option:selected").text();
 	 console.log(heheda)
 </script>
